# market-data-hub

./: .env.example  .gitignore  ASSESSMENT_2026-07.md  README.md  build_data_dictionary.py  diagnose.py  export_to_excel.py  import_from_excel.py  import_investor_base.py  make_country_dashboard.py  make_dalio_report.py  make_report.py  mkdocs.yml  pyproject.toml  reinstall_yfinance.ps1  requirements.txt  run_backfill.py  run_daily.py  run_daily_with_telegram.ps1  run_dalio_v2.py  run_regime_daily.py  run_regime_daily_with_telegram.ps1  send_telegram_run_report.py  setup_first_run.ps1  setup_scheduler.ps1  tickers_140_original.xlsx  tickers_master.csv  validate_config.py  validate_macro_panel.py
.claude/: launch.json
.github/workflows/: ci.yml  docs.yml
contracts/v1/: README.md  analysis_result.json  artifact_ref.json  instrument_id.json  price_series.json  provenance.json  resolved_artifact.json  return_series.json
docs/: ARCHITECTURE.md  DALIO_5ENGINE_IMPLEMENTATION_PLAN_2026-07.md  DALIO_CHATGPT_5ENGINE_PROPOSAL_2026-07.md  DALIO_DATA_COVERAGE_2026-07.md  DALIO_METHODOLOGY_REVIEW_2026-07.md  DALIO_PYTHON_PORTFOLIO_FRAMEWORK_NOTES_2026-07.md  DALIO_V2_DEEP_AUDIT_2026-07.md  DALIO_VINTAGE_AND_AUDIT_PLAN_2026-07.md  DATA_CATALOG.md  DEEP_AUDIT_2026-07.md  ECOSYSTEM_DEEP_AUDIT_2026-07-11.md  ECOSYSTEM_RATIONALIZATION.md  EXTRACTION.md  FINANCIAL_DATA_HUB_PLAN.md  FINANCIAL_DATA_HUB_PLAN_V3_1.md  IMPLEMENTATION_PLAN_V3_1.md  LAZYDATACORE.md  extraction.md  index.md  quickstart.md
docs/adr/: 0001-financial-data-hub-v3_1.md
market_data_hub/: __init__.py  _ssl_bootstrap.py  agent_tools.py  catalog.py  classify.py  config_loader.py  country_dashboard.py  custom.py  dalio.py  extract.py  lock.py  reader.py  runner.py
market_data_hub/config/: _generate_config.py  _generate_macro_panel.py  countries.yaml  macro_panel.yaml  macro_series.yaml  settings.yaml  tickers.yaml  xbrl_mapping_v1.yaml
market_data_hub/coverage/: __init__.py  freq_detector.py  gap_detector.py  quality_checks.py  report.py  score.py  stalled_detector.py
market_data_hub/dalio_v2/: __init__.py  cycle_classifier.py  external_constraint.py  funding_liquidity.py  political_execution.py  private_credit.py  report.py  runner.py  scoring.py  sovereign_solvency.py
market_data_hub/db/: __init__.py  connection.py  identity.py  retention.py  schema.sql  upsert.py
market_data_hub/lazydatacore/: __init__.py  artifacts.py  identity.py  quant.py  registry.py  resolver.py  result.py  series.py  timeutil.py  version.py
market_data_hub/regime/: __init__.py  estimate.py  report.py  schema.py
market_data_hub/services/: __init__.py  financials.py  health.py  prices.py
market_data_hub/sources/: __init__.py  base.py  binance.py  bis.py  ecb.py  factors.py  fred.py  imf.py  imf_sdmx.py  macro_panel.py  sec.py  worldbank.py  yahoo.py  yahoo_direct.py
scripts/: backfill_etf_classification.py  backfill_listings_from_tickers.py
skills/query-market-data-hub/: SKILL.md
tests/: conftest.py  test_audit_fixes.py  test_audit_fixes_regime.py  test_audit_fixes_regime_sources.py  test_audit_fixes_sources.py  test_boundaries.py  test_catalog.py  test_config.py  test_contracts_v1.py  test_country_dashboard.py  test_custom_series.py  test_dalio_v2.py  test_dalio_v2_cycle_classifier.py  test_dalio_v2_report.py  test_db.py  test_extract.py  test_factors.py  test_guards.py  test_lazydatacore.py  test_make_dalio_report.py  test_panel_coverage.py  test_pipeline.py  test_quant.py  test_read_instrument.py  test_refresh.py  test_regime_daily_lock_skip.py  test_registry.py  test_retention.py  test_run_report.py  test_schema_version.py  test_services_financials.py  test_services_prices.py  test_sources_binance.py  test_sources_bis.py  test_sources_fred.py  test_sources_imf.py  test_sources_macro_panel.py  test_sources_worldbank.py  test_sources_yahoo_direct.py  test_vintage.py
