[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-data-hub"
version = "0.1.0"
description = "Unified market data consolidation pipeline (DuckDB) with a read-only extraction & discovery API for LLMs and downstream tools."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [{ name = "Marco Selva" }]
dependencies = [
    "duckdb>=1.0",
    "curl_cffi>=0.6",
    "pandas>=2.0",
    "numpy",
    "requests",
    "pyarrow",
    "openpyxl",
    "pyyaml",
    "certifi",
    "truststore",
    "filelock>=3.0",
    # lazydatacore: the shared data contract (identity, time, series, results)
    # is pydantic-only and imported by every downstream tool.
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
packages = ["market_data_hub", "market_data_hub.db", "market_data_hub.sources", "market_data_hub.coverage", "market_data_hub.lazydatacore"]

[tool.setuptools.package-data]
market_data_hub = ["config/*.yaml"]
"market_data_hub.db" = ["*.sql"]
