[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-data-hub"
version = "0.1.0"
description = "Unified market data consolidation pipeline (DuckDB) with a read-only extraction & discovery API for LLMs and downstream tools."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [{ name = "Marco Selva" }]
dependencies = [
    "duckdb>=1.0",
    "curl_cffi>=0.6",
    "pandas>=2.0",
    "numpy",
    "requests",
    "pyarrow",
    "openpyxl",
    "pyyaml",
    "certifi",
    "truststore",
    "filelock>=3.0",
    # lazydatacore: the shared data contract (identity, time, series, results)
    # is pydantic-only and imported by every downstream tool.
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "pytest-randomly>=3.12", "ruff", "pip-audit"]

[tool.setuptools.packages.find]
# Auto-discover every subpackage under market_data_hub/ (must have
# __init__.py). An explicit hand-maintained list silently drops new
# subpackages from real (non-editable) installs -- exactly what happened to
# market_data_hub.dalio_v2 and market_data_hub.regime, both missing from
# every wheel built before this fix even though `pip install -e .` (used in
# this dev checkout) worked fine and hid the gap. See ci.yml's "Verify the
# package actually installs" step, added for the same reason.
include = ["market_data_hub*"]

[tool.setuptools.package-data]
market_data_hub = ["config/*.yaml"]
"market_data_hub.db" = ["*.sql"]
