[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-data-hub"
version = "0.1.0"
description = "Unified market data consolidation pipeline (DuckDB) with a read-only extraction & discovery API for LLMs and downstream tools."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [{ name = "Marco Selva" }]
dependencies = [
    "duckdb>=1.0",
    "curl_cffi>=0.6",
    "pandas>=2.0",
    "numpy",
    "requests",
    "pyarrow",
    "openpyxl",
    "pyyaml",
    "certifi",
    # every truststore release requires Python >=3.10 (verified: none support
    # 3.9); the import in _ssl_bootstrap.py is already exception-guarded for
    # its absence, so 3.9 installs simply skip it rather than fail to install.
    "truststore; python_version >= '3.10'",
    "filelock>=3.0",
    # lazydatacore: the shared data contract (identity, time, series, results)
    # is pydantic-only and imported by every downstream tool.
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0", "pytest-cov>=4.0", "pytest-randomly>=3.12", "ruff", "pip-audit",
    "mypy>=1.8", "types-requests", "types-PyYAML",
    # only ever imported under `if TYPE_CHECKING:` (TypeGuard helpers) -- not
    # a runtime dependency, needed solely for the mypy step in CI.
    "typing_extensions",
]

[tool.mypy]
# No explicit python_version: mypy then assumes the version of the
# interpreter actually running it (pinned to 3.12 in ci.yml, since mypy 2.x
# requires >=3.10 to run at all). Pinning it lower than that broke parsing
# of numpy's own bundled .pyi stubs, which use syntax matching numpy's
# actual installed (3.12-targeted) version, not an arbitrary lower target.
# The 3.9 compatibility guarantee comes from running the real test suite on
# Python 3.9 in CI (see ci.yml's matrix), not from this setting.
files = [
    "market_data_hub/lazydatacore",
    "market_data_hub/regime",
    "market_data_hub/catalog.py",
    "market_data_hub/sources",
]
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
# The cheapest, most targeted catcher for "Optional non gestiti": a
# parameter defaulting to None must be declared Optional[...] explicitly.
no_implicit_optional = true
warn_return_any = true
# Keeps any future `# type: ignore` honest -- an ignore that stops being
# needed (e.g. after an upstream stub improves) is flagged, not left stale.
warn_unused_ignores = true

[tool.setuptools.packages.find]
# Auto-discover every subpackage under market_data_hub/ (must have
# __init__.py). An explicit hand-maintained list silently drops new
# subpackages from real (non-editable) installs -- exactly what happened to
# market_data_hub.dalio_v2 and market_data_hub.regime, both missing from
# every wheel built before this fix even though `pip install -e .` (used in
# this dev checkout) worked fine and hid the gap. See ci.yml's "Verify the
# package actually installs" step, added for the same reason.
include = ["market_data_hub*"]

[tool.setuptools.package-data]
market_data_hub = ["config/*.yaml"]
"market_data_hub.db" = ["*.sql"]
